manifest/index.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: index
spec:
  selector:
    matchLabels:
      run: index
  replicas: 1
  template:
    metadata:
      labels:
        run: index
    spec:
      containers:
      - name: index
        image: azizbhy/index:v0.1.0
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config
            mountPath: /usr/share/nginx/html/config.js
            readOnly: true
            subPath: config.js
      volumes:
      - name: config
        configMap:
          name: blog-configmap
          items:
            - key: config.js
              path: config.js

---
apiVersion: v1
kind: Service
metadata:
  name: index
  labels:
    run: index
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: index
