manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-index
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - blog.creometry.dev
    secretName: test
  rules:
  - host: colibris.creometry.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: index
            port:
              number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-services
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - blog.creometry.dev
    secretName: test
  rules:
  - host: blog.creometry.dev
    http:
      paths:
      - path: /articles(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: article
            port:
              number: 5000
      - path: /authors(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: author
            port:
              number: 5000
